--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4071,10 +4071,9 @@ body.is-preload #intro:not(.hidden) + #header + #nav {
 
 #footer {
   color: #717981;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  justify-items: center;
   background-color: #f5f5f5;
   color: #909498;
   cursor: default;
@@ -4425,7 +4424,8 @@ body.is-preload #intro:not(.hidden) + #header + #nav {
 #footer form label,
 #footer h3,
 #footer p {
-  font-size: 0.8rem;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 @media screen and (max-width: 980px) {
